# cipher

./: .gitignore  .rubocop.yml  AGENTS.md  BUILD-ISSUES.md  CLAUDE.md  DESIGN-SYSTEM-MIGRATION.md  DESKTOP-TESTING.md  Dockerfile  ENCRYPTION_UPGRADE.md  Gemfile  MAIN-BRANCH-SETUP.md  MOBILE_BUILD_GUIDE.md  NOTES.md  README-CROSS-PLATFORM.md  README-DESKTOP.md  README.md  package-lock.json  package.json  test_desktop_app.sh
.claude/: settings.local.json
.github/workflows/: pages.yml
app/channels/: signaling_channel.rb
app/controllers/: application_controller.rb  attachments_controller.rb  comments_controller.rb  email_verifications_controller.rb  messages_controller.rb  posts_controller.rb  theme_controller.rb  themes_controller.rb  users_controller.rb
app/helpers/: application_helper.rb
app/javascript/: application.js  crypto_utils.js  friend_based_sync.js  user_registration.js  web3_utils.js
app/models/: attachment.rb  friendship.rb  peer.rb  post.rb  user.rb
app/services/: friend_peer_authorizer.rb  message_sync_service.rb  mutual_friend_sync_service.rb  web_rtc_config.rb
config/: application.rb  brakeman.yml  database.yml  importmap.rb  routes.rb
config/environments/: android.rb  desktop.rb
config/initializers/: database_setup.rb  security.rb
contracts/: CipherDataStorage.sol  CipherToken.sol  deploy.js
db/: schema.rb
db/migrate/: 20250909143228_create_friendships.rb  20250912144853_add_email_verification_to_users.rb  20250913121127_create_p2p_connections.rb
docs/: README.md  _config.yml  index.html  robots.txt  script.js  styles.css
lib/: dev_helpers.rb
public/: .!21081!app.html  app.html  app.html.backup  index.html  mobile-index.html
releases/: README.md
releases/android/: README.md
releases/ios/: README.md
releases/linux/: README.md
releases/macos/: README.md
releases/windows/: README.md
scripts/: build-android-libs.sh  build-desktop-windows.bat  build-desktop-windows.ps1  build-desktop.sh  build-mobile.sh  dev-mobile.sh  package-ruby-android.sh  prepare-release.sh  run-android-dev.sh  run-ios-static.sh  sideload-mobile.sh  test-android.sh  test-desktop-functional.sh  test-desktop-native.sh  test-desktop.sh  test_watchdog.sh  update-release-links.sh
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.mobile.conf.json
src-tauri/icons/: icon.icns
src-tauri/releases/macos/latest/: checksums.txt
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/tests/: desktop_app_native_test.rs
test/: application_system_test_case.rb  test_helper.rb
test/channels/: signaling_channel_test.rb
test/controllers/: comments_controller_test.rb  messages_controller_test.rb  mobile_apps_controller_test.rb  p2p_connections_controller_test.rb  posts_controller_test.rb  users_controller_test.rb
test/fixtures/: attachment_shares.yml  attachments.yml  comments.yml  friendships.yml  messages.yml  p2p_connections.yml  peers.yml  posts.yml  sync_messages.yml  users.yml
test/helpers/: mobile_banner_helper_test.rb
test/integration/: mobile_banner_integration_test.rb  post_attachments_test.rb  spam_prevention_test.rb
test/models/: attachment_share_test.rb  attachment_test.rb  comment_test.rb  email_verification_test.rb  friends_of_friends_test.rb  friendship_test.rb  p2p_connection_test.rb  peer_test.rb  post_sync_test.rb  post_test.rb  sync_message_test.rb  user_test.rb
test/services/: friend_peer_authorizer_test.rb  mutual_friend_sync_service_test.rb
test/system/: android_app_test.rb  auth_debug_test.rb  complete_user_journey_test.rb  desktop_app_test.rb  (+12 more)
(+106 files in other folders)
