[package]
name = "cipher-desktop"
version = "0.5.1"
description = "Cipher - End-to-End Encrypted P2P Social Network"
authors = ["Cipher Team"]
license = "MIT"
repository = "https://github.com/aosmith/cipher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = [ "window-unmaximize", "shell-open", "dialog-save", "dialog-confirm", "dialog-ask", "window-start-dragging", "clipboard-write-text", "window-maximize", "notification-all", "window-unminimize", "window-hide", "window-close", "dialog-message", "window-minimize", "dialog-open", "clipboard-read-text", "global-shortcut-all", "window-show"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
