[package]
name = "cipher-desktop"
version = "0.6.5"
description = "Cipher - End-to-End Encrypted P2P Social Network"
authors = ["Cipher Team"]
license = "MIT"
repository = "https://github.com/aosmith/cipher"
edition = "2021"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["devtools", "wry"], default-features = false }
tauri-plugin-shell = { version = "2.0.0", default-features = false }

# For Android builds - use rustls instead of openssl
[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2.0", features = ["devtools", "rustls-tls", "wry"], default-features = false }
tauri-plugin-shell = { version = "2.0.0", default-features = false }

[features]
# this features is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
